--- a/params.yaml
+++ b/params.yaml
@@ -1,5 +1,13 @@
+base:
+  random_state: 45
+
 datasource:
   given: data_given/online_shoppers_intention.csv
 
 data:
-  raw_data: data/raw/raw_data.csv 
+  raw_data: data/raw/raw_data.csv
+
+split_data:
+  train_path: data/processed/train_data.csv
+  test_path: data/processed/test_data.csv
+  test_size: 0.2
