--- a/params.yaml
+++ b/params.yaml
@@ -11,3 +11,6 @@ split_data:
   train_path: data/processed/train_data.csv
   test_path: data/processed/test_data.csv
   test_size: 0.2
+
+reports:
+  scores: report/scores.json
