--- a/dvc.yaml
+++ b/dvc.yaml
@@ -19,12 +19,17 @@ stages:
     - data/processed/test_data.csv
 
   train_and_evaluate:
-    cmd: python3 src/split_data.py --config=params.yaml
-    deps:
+    cmd: python3 src/train_and_evaluate.py --config=params.yaml
+    deps: 
     - src/get_data.py
     - src/train_and_evaluate.py
     metrics:
     - report/scores.json:
         cache: false
+    params:
+    - estimators.n_estimators 
     outs:
     - saved_models/best_model.joblib
+
+
+ 
