--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -3,10 +3,10 @@ name: Online Shopers Intention Classification
 on:
   push:
     branches:
-    - main
+    - dev
   pull_request:
     branches:
-    - main
+    - dev
 
 jobs:
   build:
