--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+catboost==0.26.1
+Flask==2.1.1
+joblib==1.1.0
+lightgbm==3.2.1
+matplotlib==3.4.3
+nbformat==5.2.0
+numpy==1.21.4
+pandas==1.3.4
+PyYAML==6.0
+scikit_learn==1.0.2
+scipy==1.7.1
+seaborn==0.11.2
+xgboost==1.4.2
 dvc
 dvc[gdrive]
 pytest
